--- a/Assignment 1/Diabetes.ipynb
+++ b/Assignment 1/Diabetes.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 11,
       "metadata": {
         "id": "aWd22Dmwb08y"
       },
@@ -16,7 +16,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -139,7 +139,7 @@
               "4                     2.288   33        1  "
             ]
           },
-          "execution_count": 6,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -151,7 +151,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -274,7 +274,7 @@
               "767                     0.315   23        0  "
             ]
           },
-          "execution_count": 7,
+          "execution_count": 13,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -285,7 +285,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 14,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -408,7 +408,7 @@
               "4                     2.288   33        1  "
             ]
           },
-          "execution_count": 8,
+          "execution_count": 14,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -422,7 +422,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 15,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -587,7 +587,7 @@
               "max     67.100000                  2.420000   81.000000    1.000000  "
             ]
           },
-          "execution_count": 9,
+          "execution_count": 15,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -600,7 +600,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -723,7 +723,7 @@
               "4                     2.288   33        1  "
             ]
           },
-          "execution_count": 10,
+          "execution_count": 16,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -737,7 +737,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 17,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -778,7 +778,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 18,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -809,7 +809,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -839,7 +839,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -873,7 +873,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -888,6 +888,23 @@
         "scaler = StandardScaler()\n",
         "X_train_scaled = scaler.fit_transform(X_train)\n",
         "X_test_scaled = scaler.transform(X_test)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 22,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "checking Github Working\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"checking Github Working\")"
       ]
     }
   ],
